# ansOGL

./: CMakeLists.txt  CMakeLists.txt~
ans_ogl/: CMakeLists.txt  CMakeLists.txt~  ans.h  ans_decode.cs  ans_ocl.h  ans_ogl.cpp  ans_ogl.h  ans_ogl_test.cpp  ans_utils.h  bits.h  build_table.cs  cs_path_config.h.in  decode.cpp  encode.cpp  histogram.cpp  histogram.h
common/: shader.h
ogl/: CMakeLists.txt~  gl_guards.h  gpu.cpp  gpu.h  shader.h
